--- a/index.css
+++ b/index.css
@@ -64,6 +64,6 @@
                                                         background-color: #f8b75d;
                                                     }
                                                     
-                                                    .tch {
+                                                    .completed span {
                                                         text-decoration: line-through;
                                                     }
