--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@
                                                                                                     .forminput {
                                                                                                         outline: none;
                                                                                                         border-radius: 4px;
-                                                                                                        border-color: grey;
+                                                                                                        border: 0;
                                                                                                         padding: 7px;
                                                                                                         margin-top: -30px;
                                                                                                     }
